Try to fix tests on php versions lower than 5.5
symfony/yaml v2.1 should work...

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require-dev": {
         "zerkalica/phpcs": "dev-master",
+        "symfony/yaml": "~2.1",
         "phpunit/phpunit": "^4.8.6"
     },
     "config": {
